--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "app3",
   "version": "0.1.0",
   "private": true,
+    "homepage": "http://amrutapatil1720.github.io/React-Date-Format/",
   "dependencies": {
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.26",
@@ -14,6 +15,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+      "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
